--- a/templates/submitlabs.html
+++ b/templates/submitlabs.html
@@ -97,6 +97,7 @@
             <div class="col-md-3 mb-3">
             <input type="submit" value="Submit"> <a href="/mypage">Back</a>
             <p>
+                <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
             </div>
     </form>
   </div>
