--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -40,6 +40,7 @@
         <input type="hidden" name="user_id" value="{{ user_id }}">
         
         <input type="submit" value="Update Profile">
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
       </div>	
 </form>
 <a href="/mypage">Back</a>
